--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@
 plugins {
     id 'java'
     id 'eclipse'
-    id "org.springframework.boot" version "3.0.2"
+    id "org.springframework.boot" version "2.4.1"
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -20,15 +20,28 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    implementation 'org.springframework:spring-jdbc:6.0.5'
+    implementation 'org.springframework:spring-jdbc'
+
+    //JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+    //swagger
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+    implementation 'com.mysql:mysql-connector-j:8.0.32'
+
+
+    //implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    //implementation 'org.springframework.boot:spring-boot-starter-parent:3.0.3'
 
 }
 
